--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 # MONGO_URL = mongodb+srv://babjamiu:babjamiu@cluster0.brpp1g9.mongodb.net/blog?retryWrites=true&w=majority
 # MONGO_URL = mongodb+srv://babjamiu:babjamiu@cluster0.brpp1g9.mongodb.net/myBlog
+
 MONGO_URL =mongodb+srv://babjamiu:RXsXK9H2TxEJzKwp@cluster0.brpp1g9.mongodb.net/blog
+
+# MONGO_URL = mongodb://localhost:27017/bblog
